// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Modal ClickCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rh:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ri:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ri:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rh:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal Defaults play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r2:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r2:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal VariantImportant play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5 _modalNoBorder_125nh_39"
          aria-labelledby="modalHeadingId-:r6:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <img class="_logo_1juh7_1 _modalLogo_125nh_26"
             src="[REMOVED]"
             alt="Skatteetaten logo"
        >
        <h1 id="modalHeadingId-:r6:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
      <div class="_separator_11id6_1">
        <div class="_separatorLeft_11id6_5">
        </div>
        <div class="_separatorRight_11id6_13">
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal VariantPlain play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5 _modalNoBorder_125nh_39"
          aria-labelledby="modalHeadingId-:r4:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r4:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog id="htmlId"
          class="_modal_125nh_5  dummyClassname"
          lang="nb"
          data-testid="123ID"
          aria-labelledby="modalHeadingId-:r0:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r0:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoClose play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rj:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rj:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoCloseDisabled play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rl:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rm:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rm:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rl:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithHideTitle play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rn:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rn:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29  _srOnly_125nh_71"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithImage play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r8:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r9:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r9:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <img src="[REMOVED]"
           alt="Image alt tekst"
           class="_modalIllustration_125nh_35"
      >
      <div class="_modalPaddingL_125nh_51 _modalNoPaddingTop_125nh_57">
        <h1 id="modalHeadingId-:r8:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithPadding play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rd:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:re:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:re:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingNONE_125nh_42">
        <h1 id="modalHeadingId-:rd:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <modal-customelement>
  </modal-customelement>
</div>
`;

exports[`Tester/Modal WithTransparentBackground play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:ra:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:ra:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithVerticalScrolling play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rf:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_g87u5_1 _button_medium_g87u5_45  _closeButton_125nh_61"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rg:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rg:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rf:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithoutCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rc:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rc:"
            class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;
